<resources>
    <string name="app_name">IPFS应用</string>
    <string name="app_intro">试试IPFS在手机上怎么用的</string>

    //main drawer
    <string name="zhihu">知乎日报</string>
    <string name="wechat">微信精选</string>
    <string name="gank">干货集中营</string>
    <string name="gold">稀土掘金</string>
    <string name="vtex">V2EX</string>
    <string name="ipfs">IPFS</string>
    <string name="wallet">钱包</string>
    <string name="drawer_about">关于</string>
    <string name="drawer_collection">收藏</string>
    <string name="drawer_setting">设置</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="drawer_group_content">资讯</string>
    <string name="drawer_group_options">选项</string>

    <string name="detail_bottom_share">分享</string>
    <string name="detail_bottom_like">点赞</string>
    <string name="detail_bottom_commit">评论</string>
    <string name="comment_expand">收起</string>

    <string name="action_copy">复制链接到剪贴板</string>
    <string name="action_save">保存到本地</string>
    <string name="action_share">分享链接</string>
    <string name="action_like">收藏</string>
    <string name="action_search">搜索</string>

    <string name="setting_cache">自动缓存</string>
    <string name="setting_image">无图模式</string>
    <string name="setting_night">夜间模式</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_clear">清除缓存</string>
    <string name="setting_update">检查更新</string>
    <string name="setting_normal">常规</string>
    <string name="setting_other">其他</string>

    <string name="about_addr">项目地址:\n 敬请期待</string>
    <string name="about_author">作者:Est\t\t(codeest.dev@gmail.com)</string>
    <string name="about_project">项目简介:\n IPFS应用，通过IPFS分享文件，发布节点，其他人通过PUBLISH_NODE获得节点数据，并看到文件，完全的去中心化应用</string>
    <string name="about_award">请作者吃糖(￣▽￣)</string>
    <string name="about_info">IPFS \t\t\tV1.3.0</string>
    <string name="error_tips">糟糕！加载失败了ヽ(≧Д≦)ノ\n 偷偷告诉你一些可能的原因：\n1.惨不忍睹的网络环境\n 2.服务器君的不定期抽风\n 3.GeekNews现在心情不好拒绝服务喔~</string>


    <string name="check_ipfs">检查IPFS</string>
    <string name="start_ipfs"> 启动IPFS Daemon </string>
    <string name="status_ipfs"> IPFS 状态 </string>
    <string name="check_Ipfs_version"> 检查 IPFS 版本 </string>
    <string name="btn_checkIpfsAPI"> 检查 IPFS API使用 </string>
    <string name="btn_checkIpfsID"> 命令行检查 IPFS ID </string>
    <string name="btn_upload">上传文件</string>
    <string name="btn_choose">选择文件</string>
    <string name="tv_filename">文件名称</string>

    <string name="et_desc">添加描述</string>
    <string name="et_price">价格：单位(TT代币)，默认0，不需要</string>
    <string name="btn_check_image">检查上传内容</string>

    <string name="topic">Pubsub主题</string>
    <string name="pubsub_data">Pubsub 消息内容, 默认是 PUBLISH_NODE，用来监听节点；如果是特定TOPIC，需改Pubsub的主题即可</string>
    <string name="btn_pub">发布Topic</string>
    <string name="btn_sub">监听Topic</string>
    <string name="sub_publish_node">PUBLISH_NODE</string>


    <string name="ipfs_address">ipfs 地址</string>
    <string name="btn_swarm">手动添加节点</string>
    <string name="btn_change">换个地址试试</string>
    <string name="swarm_peers"> List peers with open connections.</string>
    <string name="bootstrap_add">手动添加节点到bootstrap</string>


    <string name="ipfs_create_img">生成本节点地址二维码</string>
    <string name="ipfs_add_node">扫一扫，添加节点</string>

    <string name="btn_ipfs_pub_data">发布节点数据</string>
    <string name="btn_ipfs_pub_node">发布个人节点数据到网络</string>
    <string name="ipfs_channel_node">检查从节点得到的数据</string>
    <string name="btn_ipfs_pub_name">发布Node</string>

    <string name="btn_wallet">钱包功能1</string>
    <string name="generateWallet">创建轻钱包</string>
    <string name="conn_ropsten">测试连接到ROPSTEN INFURA网络</string>
    <string name="password_hint">钱包密码</string>
    <string name="receiveraddress">接受者钱包地址</string>

    <string name="set_wallet_address">设置主钱包地址</string>
    <string name="change_wallet">更换主钱包地址</string>
    <string name="no_main_wallet">没有设置钱包地址</string>

    <string name="sent_from">支付者的钱包地址</string>

    <string name="sent_to">接受者的钱包地址</string>

    <string name="send_coin">发送钱币</string>
    <string name="contract_result">合同结果</string>


    <string name="hash_file_hint">输入hash地址来获取文件</string>
    <string name="file_get">获取文件</string>

    <string name="cancel">取消</string>



</resources>
