<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/view_toolbar" />


    <Button
        android:id="@+id/btn_save_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ipfs_create_img" />
    <Button
        android:id="@+id/btn_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_change" />

    <ImageView
        android:id="@+id/iv_qr_img"
        android:layout_width="200dp"
        android:layout_height="200dp" />

    <TextView
        android:id="@+id/tv_ip_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ipfs_address" />

    <Button
        android:id="@+id/btn_save_by_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ipfs_add_node" />


    <EditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/ipfs_address" />

    <Button
        android:id="@+id/btn_swarm"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/btn_swarm" />


</LinearLayout>
