<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/view_toolbar" />

    <EditText
        android:id="@+id/et_topic"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/sub_publish_node" />


    <Button
        android:id="@+id/btn_sub"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/btn_sub" />


    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:hint="@string/pubsub_data" />

</LinearLayout>
