<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <include
        android:id="@+id/toolbar"
        layout="@layout/view_toolbar" />

    <EditText android:layout_height="100dp"
        android:layout_width="match_parent"
        android:id="@+id/et_topic"
        android:hint="@string/topic"
        />


    <EditText android:layout_height="200dp"
        android:layout_width="match_parent"
        android:id="@+id/et_message"
        android:hint="@string/pubsub_data"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/btn_pub"
        android:text="@string/btn_pub"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_pub_node_result"
        android:text="结果"
        android:layout_gravity="center"
        android:gravity="center"
        />
</LinearLayout>
