<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name"
        android:text="@string/no_main_wallet"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/btn_quit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_toLeftOf="@+id/v1"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="8dp"
            android:text="@string/set_wallet_address"
            android:textColor="@color/colorCard"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="16dp"
            android:layout_toRightOf="@+id/btn_quit"
            android:layout_weight="1"
            android:background="@color/cardview_dark_background"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="8dp"
            android:text="@string/cancel"
            android:textColor="@color/colorCard"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>
