<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/view_toolbar" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:hint="选择你的帐号" />

    <Button
        android:id="@+id/btn_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="选择" />

    <TextView
        android:id="@+id/tv_receiveraddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center_vertical"
        android:hint="@string/receiveraddress" />


    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:hint="内容" />

    <Button

        android:id="@+id/btn_get"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="获取"
        tools:layout_editor_absoluteY="93dp" />

    <EditText
        android:id="@+id/et_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="设置的数值" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_coin" />

    <TextView
        android:id="@+id/tv_contract_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contract_result" />

    <ProgressBar
        android:id="@+id/pbar_small"
        style="@android:style/Widget.ProgressBar.Inverse"
        android:layout_width="wrap_content"
        android:visibility="invisible"
        android:layout_height="wrap_content" />


</LinearLayout>